[gd_scene load_steps=2 format=3 uid="uid://bqq7dwjlp2x0j"]

[ext_resource type="Script" uid="uid://ba4h2yt4enqw5" path="res://Scenes/UI/Main Screen/Side Bar/side_ui.gd" id="1_gsy47"]

[node name="SideUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gsy47")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1002.0
offset_top = 105.0
offset_right = 1152.0
offset_bottom = 608.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 157.0
offset_bottom = 27.0

[node name="Magnet" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Magnet Coins"

[node name="AutoCollect" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Auto collect "

[node name="VisibilityButton" type="Button" parent="."]
layout_mode = 0
offset_left = 972.0
offset_top = 105.0
offset_right = 1002.0
offset_bottom = 136.0
toggle_mode = true
text = ">"

[connection signal="pressed" from="Panel/VBoxContainer/Magnet" to="." method="_on_magnet_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/AutoCollect" to="." method="_on_auto_collect_pressed"]
[connection signal="toggled" from="VisibilityButton" to="." method="_on_visibility_button_toggled"]
